--- a/my-site/index.html
+++ b/my-site/index.html
@@ -3,158 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>История ЭВМ</title>
+    <title>Document</title>
 </head>
 <body>
-    <a href="#genetarion">Поколения ЭВМ</a>
-    <!-- Блочные и строчные теги в HTML. Теги div и span -->
-    <div>
-        <h2>История ЭВМ</h2>
-        <p>
-            Первые <span>электронные вычислительные машины</span> появились в середине XX века
-        </p>
-    </div>
-    <div>
-        <p style="background-color: plum;">
-            Тег <span style="background-color: peachpuff;">span</span> используется для выделения части текста внутри строки.
-        </p>
-    </div>
-
-    <hr/>
-
-    <!-- Теги форматирования текста -->
-    <div>
-        <b>ЭВМ</b> — это электронная вычислительная машина.
-        <p><strong>Важно:</strong> первые ЭВМ занимали целые помещения.</p>
-        <p><i>Курсивный текст</i> и <em>логически выделенный текст</em>.</p>
-        <p><s>Устаревшая информация</s></p>
-        <p><u>Подчёркнутый текст</u></p>
-        <p>Формула воды: H<sub>2</sub>O</p>
-        <p>Степень числа: 2<sup>3</sup> = 8</p>
-        <p><small>Мелкий текст для примечаний</small></p>
-        <p><mark>Выделенный важный фрагмент</mark></p>
-        Первая строка <br/>
-        Вторая строка
-        <hr/>
-        Пример кода:
-        <p><code>&lt;h1&gt;История ЭВМ&lt;/h1;&gt;</code></p>
-    </div>
-
-    <hr/>
-
-    <!-- Абсолютные и относительные ссылки в HTML. Якорные ссылки. mailto, tel, download -->
-    <div>
-        <a href="info.html">
-            <button>Перейти к истории ЭВМ</button>
-        </a>
-     
-        <hr/>
-     
-        <h2 id="generation">Поколения ЭВМ</h2>
-        <p>Описание поколений электроных вычислительных машин.</p>
-
-        <hr/>
-
-        <p>
-            <a href="../README.md" download="">
-                Скачать описание лаборатоной
-            </a>
-        </p>
-        <p>
-            <a href="mailto:nika_gvozdeva0.0@mail.ru">
-                Написать письмо
-            </a>
-        </p>
-
-        <p>
-            <a href="tel:+88005553535">
-                Позвонить
-            </a>
-        </p>
-    </div> 
-
-    <hr/>
-
-    <!-- HTML изображения. Относительные и абсолютные пути -->
-    <div>
-        <p>
-            <img src="../img/computer_generation_1.jpg" alt="ЭВМ ENIAC" width="300" height="200">
-        </p>
-        <p>  
-            <img src="../img/computer_generation_2.jpg" alt="ENIAC" width="300"> <!-- ссылка была длинная поэтому не поставил -->
-        </p>
-        <p>
-            <img src="../img/computer_generation_3.jpg" alt="Старая вычислительная машина" width="400" loading="lazy">
-        </p>
-        <p>
-            <img src="../img/computer_generation_4.jpg" alt="ЭВМ 4 поколения" width="300">
-        </p>
-    </div>
-
-    <hr/>
-
-    <!-- Цитаты в HTML — теги blockquote, cite. Атрибут cite. Источник цитаты в HTML -->
-    <div>
-        <p>
+    <header>
+        <h1>История развития ЭВМ</h1>
+    </header>
+    <nav>
+        <a href="#gen2">Поколения</a>
+        <a href="#media.html">Медиа</a>
+        <a href="#forms.html">Формы</a>
+        <a href="vector.html" target="_blank">SVG</a>
+    </nav>
+    <main>
+        <section id="gen1">
+            <h2>Первое поколение ЭВМ</h2>
+            <p>Пример якорной ссылки и текстового блока.</p>
+            <blockquote cite="https://ru.wikipedia.org/wiki/ЭВМ">ЭВМ первого поколения занимали целые помещения.</blockquote>
+            <cite>Источник: Википедия</cite>
+            <br/><br/>
+            <a href="mailto:studenr@mail.ru">Написать письмо</a>
+            <a href="tel:+79990000000">Позвонить</a>
+            <button>Кнопка</button>
+        </section>
+        <aside>
+            <h3>Фото</h3>
+            <img src="../img/computer_generation_1.jpg" alt="1 поколение ЭВМ" height="150"/>
+        </aside>
+        <section id="gen2">
+            <h2>Второе поколение ЭВМ</h2>
+            <p>Пример якорной ссылки и текстового блока.</p>
             <blockquote cite="https://ru.wikipedia.org/wiki/ЭВМ">
-                <q>Электронная вычислительная машина - комплекс технических средсвт,
-                предназначенных для автоматической обработки информации.</q>
+                Во втором поколении ЭВМ появились ОС.
             </blockquote>
             <cite>Источник: Википедия</cite>
-        </p>
-
-        <p>
-            По словам учёных:
-            <q>развитие вычислительной техники изменило ход истории</q>.
-        </p>
-    </div>
-
-    <hr/>
-
-    <!-- Медиаконтент в HTML — видео, аудио, фреймы. Теги video, audio, iframe. Тег source -->
-    <div>
-        <p>
-            <video controls width="400">
-                <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"/>
-                Ваш браузер не поддерживает видео.
-            </video>
-        </p>
-
-        <p>
-            <audio controls>
-                <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg"/>
-                Ваш браузер не поддерживает аудио.
-            </audio>
-        </p>
-
-        <p>
-            <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=lWn3NvMZnZ1CcRhp"
-                title="История ЭВМ"
-                allowfullscreen>
-            </iframe>
-        </p>
-    </div>
-
-    <hr/>
-
-    <!-- HTML тег input и его вариации. Атрибут type, значения tel, email, password, url, search и другие -->
-    <div>
-        <form>
-            <label>Телефон: <input type="tel" placeholder="+7 (___) ___-__-__"/></label>
             <br/><br/>
-            <label>Email: <input type="email" placeholder="example@mail.com"/></label>
-            <br/><br/>
-            <label>Пароль: <input type="password"/></label>
-            <br/><br/>
-            <label>Сайт: <input type="url" placeholder="https://example.com"/></label>
-            <br/><br/>
-            <label>Поиск: <input type="search" placeholder="Поиск..."/></label>
-            <br/><br/>
-            <input type="submit" value="Отправить"/>
-        </form>
-    </div>
+            <a href="mailto:student@mail.ru">Написать письмо</a>
+            <a href="tel:+79990000000">Позвонить</a>
+            <button>Кнопка</button>
+        </section>
+        <aside>
+            <h3>Фото</h3>
+            <img src="../img/computer_generation_2.jpg" alt="2 поколение ЭВМ" height="150"/>
+        </aside>
+    </main>
+    <footer>
+        <p title="Подсказка">Лабораторная работы №6. HTML + CSS</p>
+    </footer>
 </body>
 </html>
