Added image for style.css

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
             <br/><br/>
             <a href="mailto:studenr@mail.ru">Написать письмо</a>
             <a href="tel:+79990000000">Позвонить</a>
-            <button>Кнопка</button>
+            <button class="btn-primary">Кнопка</button>
         </section>
         <aside>
             <h3>Фото</h3>
@@ -50,5 +51,7 @@
     <footer>
         <p title="Подсказка">Лабораторная работы №6. HTML + CSS</p>
     </footer>
+
+    <p style="color: red;">Красный текст</p>
 </body>
 </html>
