Change vector.html and CSS

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -12,8 +12,8 @@
     </header>
     <nav>
         <a href="#gen2">Поколения</a>
-        <a href="#media.html">Медиа</a>
-        <a href="#forms.html">Формы</a>
+        <a href="media.html">Медиа</a>
+        <a href="forms.html">Формы</a>
         <a href="vector.html" target="_blank">SVG</a>
     </nav>
     <main>
